--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "clean": "rimraf public",
-    "dev:tailwind": "npx tailwindcss -i src/styles/tailwind.css -o public/styles/main.css --watch",
+    "clean": "rimraf _site",
+    "dev:tailwind": "npx tailwindcss -i src/styles/tailwind.css -o _site/styles/main.css --watch",
     "dev:eleventy": "npx @11ty/eleventy --serve",
-    "build:tailwind": "npx tailwindcss -i src/styles/tailwind.css -o public/styles/main.css --minify",
+    "build:tailwind": "npx tailwindcss -i src/styles/tailwind.css -o _site/styles/main.css --minify",
     "build:eleventy": "ELEVENTY_PRODUCTION=true npx @11ty/eleventy",
     "dev": "npm run clean & npx concurrently npm:dev:*",
     "build": "NODE_ENV=production npm run clean & npx concurrently npm:build:*"
@@ -15,10 +15,16 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "@11ty/eleventy": "^0.12.1",
+    "@tailwindcss/forms": "^0.4.0",
+    "axios": "^0.24.0",
     "concurrently": "^6.5.1",
     "rimraf": "^3.0.2",
-    "tailwindcss": "^3.0.7"
+    "tailwindcss": "^3.0.8"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.1",
+    "postcss": "^8.4.5"
   }
 }
