--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "license": "ISC",
   "dependencies": {
     "@11ty/eleventy": "^0.12.1",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.0",
     "axios": "^0.24.0",
     "concurrently": "^6.5.1",
     "rimraf": "^3.0.2",
