--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tailwindcss/typography": "^0.5.0",
     "axios": "^0.24.0",
     "concurrently": "^6.5.1",
+    "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "tailwindcss": "^3.0.8"
   },
